@@ -283,7 +283,7 @@ void CDirDoc::Rescan()
 
 	m_statusCursor = new CustomStatusCursor(0, IDC_APPSTARTING, LoadResString(IDS_STATUS_RESCANNING));
 
-	gLog.Write(LOGLEVEL::LNOTICE, _T("Starting directory scan:\n\tLeft: %s\n\tRight: %s\n"),
+	gLog.Write(CLogFile::LNOTICE, _T("Starting directory scan:\n\tLeft: %s\n\tRight: %s\n"),
 			m_pCtxt->GetLeftPath(), m_pCtxt->GetRightPath());
 	m_pCompareStats->Reset();
 	m_pDirView->StartCompare(m_pCompareStats);
@@ -676,7 +676,7 @@ void CDirDoc::UpdateChangedItem(PathContext &paths,
  */
 void CDirDoc::CompareReady()
 {
-	gLog.Write(LOGLEVEL::LNOTICE, _T("Directory scan complete\n"));
+	gLog.Write(CLogFile::LNOTICE, _T("Directory scan complete\n"));
 
 	// finish the cursor (the hourglass/pointer combo) we had open during display
 	delete m_statusCursor;
@@ -829,7 +829,7 @@ BOOL CDirDoc::SaveModified()
  */
 void CDirDoc::AbortCurrentScan()
 {
-	gLog.Write(LOGLEVEL::LNOTICE, _T("Dircompare aborted!"));
+	gLog.Write(CLogFile::LNOTICE, _T("Dircompare aborted!"));
 	m_diffThread.Abort();
 }
 
